[package]
name = "mb2-playground"
authors = ["Bradley Thompson <bradlet2@pdx.edu>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
microbit-v2 = "0.13.0"
rtt-target = "0.4"
lsm303agr = "0.3.0"

[dependencies.rust-fsm]
version = "0.6"
default-features = false
features = ["dsl"]

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.critical-section-lock-mut]
git = "https://github.com/pdx-cs-rust-embedded/critical-section-lock-mut"
